gitops/apps/atuin/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: atuin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: atuin
    spec:
      containers:
        - args:
            - start
          image: ghcr.io/atuinsh/atuin:18.23.0
          name: atuin
          ports:
            - name: http
              containerPort: 8888
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: atuin-claim0
      volumes:
        - name: atuin-claim0
          persistentVolumeClaim:
            claimName: atuin-claim0
