gitops/apps/atuin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: atuin
  name: atuin-svc
spec:
  ports:
    - name: 'http'
      port: 8888
      targetPort: 8888
  selector:
    app.kubernetes.io/name: atuin
