gitops/apps/atuin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atuin
  annotations:
    cert-manager.io/cluster-issuer: root-didactiklabs
  labels:
    probe: enabled
spec:
  rules:
    - host: 'atuin.didactik.labs'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atuin-svc
                port:
                  number: 8888
  tls:
    - hosts:
        - 'atuin.didactik.labs'
      secretName: atuin-tls
